Don't check for unsigned variables being less than 0 in patchunwindframe(). Instead, check before subtracting, which in this case means at the call site.

It would probably be better to change the call signature so the
subtraction happens inside patchunwindframe(), but since I don't
really know exactly what this code is trying to do I'm not comfortable
changing it.

Issue 1 in PR 51297 from David Binderman.